Use virtual threads for IO execution